--- a/src/main/webapp/includes/css/main.css
+++ b/src/main/webapp/includes/css/main.css
@@ -432,8 +432,8 @@ border-color:#285e8e
 }
 
 .full-box{
-border:1px
-background-color:gray;
+border:1px;
+background:gray;
 padding:10px;
 border-radius:6px;
 float:left;
@@ -613,4 +613,4 @@ ul#css3menu1 li {
     color: #888a8c;
     font-weight: normal;
 
-}                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
+}
